# learning-with-kiwi

./: .gitignore  README.md  app.py  main.py  main_modular.py  pyproject.toml  requirements.txt
exam_system/: auth.py  components.py  config.py  debug_logs.py  main.py  models.py  pages.py  setup_project.py  utils.py
exam_system/.streamlit/: secrets.toml
exam_system/components/: __init__.py
exam_system/components/common/: __init__.py  header.py  login.py
exam_system/components/student/: __init__.py  exam_form.py  result_view.py
exam_system/components/teacher/: __init__.py  grading.py  question_edit.py  question_form.py  user_management.py
pages/: __init__.py  student_page.py  teacher_page.py
tests/: app.py  pages.py
