[project]
name = "learning-with-kiwi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==4.2.2",
    "anyio==4.12.0",
    "attrs==25.4.0",
    "audio-recorder-streamlit==0.0.10",
    "blinker==1.9.0",
    "cachecontrol==0.14.4",
    "cachetools==6.2.4",
    "certifi==2025.11.12",
    "cffi==2.0.0 ; platform_python_implementation != 'PyPy'",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cryptography==46.0.3",
    "entrypoints==0.4",
    "firebase-admin==7.1.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "google-api-core==2.28.1",
    "google-auth==2.45.0",
    "google-cloud-core==2.5.0",
    "google-cloud-firestore==2.22.0 ; platform_python_implementation != 'PyPy'",
    "google-cloud-storage==3.7.0",
    "google-crc32c==1.8.0",
    "google-resumable-media==2.8.0",
    "googleapis-common-protos==1.72.0",
    "grpcio==1.76.0",
    "grpcio-status==1.76.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "markupsafe==3.0.3",
    "msgpack==1.1.2",
    "numpy==2.4.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "proto-plus==1.27.0",
    "protobuf==6.33.2",
    "pyarrow==22.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23 ; implementation_name != 'PyPy' and platform_python_implementation != 'PyPy'",
    "pydeck==0.9.1",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "streamlit==1.52.2",
    "streamlit-audiorec==0.1.3",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "toolz==1.1.0",
    "tornado==6.5.4",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "watchdog>=6.0.0",
    "watchdog==6.0.0 ; sys_platform != 'darwin'",
]
